# scrolls-tabletop-game

./: CHANGELOG.md  cabal.project  scrolls-tabletop-game.cabal
exe/: Main.hs
lib/Scrolls/: Card.hs  CardFile.hs  Engine.hs  Predefs.hs
